updating the paper, got to 3/4 of specifications section

--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -38,6 +38,9 @@ if it returns $\mathtt{`or1}$, then $\lnot (x \per_s y)$. In other
 words $\mathtt{eq}$ is a decision procedure which tells when
 values~$x$ and~$y$ represent the same element of the modest set.
 
+\subsection{Examples with obligations}
+\label{sec:exampl-with-oblig}
+
 
 \subsection{Finite sets}
 \label{sec:finite-sets}
