--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -40,7 +40,7 @@
 \newcommand{\set}[1]{\{#1\}}
 \newcommand{\such}{\mid}
 \newcommand{\pair}[1]{\langle #1 \rangle}
-
+\newcommand{\epito}{\twoheadrightarrow}
 \newcommand{\family}[2]{\set{#1}_{#2}}
 \newcommand{\depsum}[2]{{\Sigma_{#1} #2}}
 \newcommand{\depprod}[2]{{\Pi_{#1} #2}}
