--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -305,3 +305,13 @@ KEY="Peyton Jones"}
   number = 	 {121},
   series = 	 {Studies in Logic and the Foundations of Mathematics}
 }
+
+@incollection{benl98:_proof_theor_work,
+    author = "H. Benl and U. Berger and H. Schwichtenberg and M. Seisenberger and W. Zuber",
+    title = "Proof Theory at Work: Program Development in the {M}inlog System",
+    booktitle = "Automated Deduction: A Basis for Applications. Volume {II}, Systems and Implementation Techniques",
+    publisher = "Kluwer Academic Publishers",
+    address = "Dordrecht",
+    editor = "Wolfgang Bibel and Peter H. Schmidt",
+    year = 1998
+}
