--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -9,7 +9,7 @@
 % Internal notes, used during writing the paper. The first argument is
 % the author of the note. When the paper is finished, these should
 % all be gone. Delete an internal note as soon as you resolve it.
-\newcommand{\internal}[2]{\paragraph{Note by #1:} #2}
+\newcommand{\internal}[2]{\fbox{\parbox{0.9\textwidth}{{Note by #1:} #2}}}
 
 % Types and terms in ocaml
 \newcommand{\ctype}{\mathtt{type}\;}
