--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -19,7 +19,7 @@ of a set, term, proposition, predicate, or theory (i.e.,
 \textsf{Definition} specifications). Finally, a theory element can be
 a named axiom that must hold. (i.e., \textsf{Axiom} specifications).
 
-A more complex theory is one parametrized by a model
+A theory may be parametrized by models of another theory,
 $\ilambda{\iM}{\ith_1}{\ith_2}$. A typical example in mathematics is
 the theory of a vector space, parameterized by a field of scalars. In
 Figure~\ref{fig:kuratowski}, \texttt{K} is a theory parameterized by a
@@ -28,51 +28,20 @@ model~$\im$, then, $\mathtt{K}(\im)$ is a theory describing a model of
 finite sets whose elements are in the set $\iselect{\im}{\mathtt{a}}$.
 
 A theory may also describe a uniform family of models
-$\idarrow{\im}{\ith_1}{\ith_2}$. 
+$\idarrow{\im}{\ith_1}{\ith_2}$, i.e., a single implementation of a
+mapping\footnote{In OCaml such mappings are called \emph{functors}.}
+that maps any model~$\im$ satisfying~$\ith_1$ to a model of~$\ith2$.
+In contrast, a parameterized theory $T =
+\ilambda{\iM}{\ith_1}{\ith_2}$ permits completely unrelated
+implementations for $T(\im_1)$ and $T(\im_2)$. An example of a uniform
+family of models would be a mapping from fields to vectors spaces that
+maps a field~$F$ to the 1-dimensional vector space over~$F$.
 
-
-a single model of real numbers written in terms of an arbitrary model
-of the natural numbers); this would correspond to a single
-implementation that works for any model $\im$ satisfying the parameter
-theory. In contrast, a parameterized theory permits completely
-unrelated implementations for $\mathtt{K}(\im_1)$ and
-$\mathtt{K(\im_2)}$.
-
-Propositions and predicates appearing in theories may use full
-first-order constructive logic, not just the negative fragment. The
-grammar for logical inputs is shown in Figure~\ref{fig:input}. Most of
-this should be familiar, including the use of lambda abstraction to
-define predicates.
-
-The language of sets is rich, going well beyond the type systems of typical
-programming languages. In addition to any base sets postulated in a theory, one
-can construct dependent cartesian products and dependent function spaces. We
-also supports disjoint unions (with labeled tags), quotient spaces (a set
-modulo an equivalence relation), subsets (elements of a set satisfying a
-predicate). RZ even permits explicit references to sets of realizers.
-
-The term language follows the structure of the set level by providing
-introduction and elimination constructs. For product sets we have tuples and
-projections ($\iproj{\ie}{1}$, $\iproj{\ie}{2}$, \ldots), and for function spaces we have lambda abstractions and
-application. One can inject a term into a tagged dependent union, or do case analyses
-on the members of a union. We can produce the equivalence class of a given
-term, or pick a representative of a given equivalence class (as long as what we
-do with it does not depend on the particular representative). Very similarly,
-we can produce the set of realizers for a term, or choose a representative from
-a given set of realizers (as long as what we do with it does not depend on the
-particular representative). We can inject a term into a subset (if it satisfies
-the appropriate predicate), or project an element of a subset into the
-enclosing set. Finally, the term language also allows local definitions of term
-variables, and definite descriptions (as long as there is a unique element
-satisfying the predicate in question).
-
-From the parenthesized qualifiers in the previous paragraph, it is clear that checking the
-well-formedness of terms is not decidable. RZ checks what it can, but does not
-attempt any serious theorem proving.  Uncheckable constraints remain as
-explicitly-marked \emph{obligations} in the final output, and must be verified
-by other means; the output can then be trusted to the extent that the obligations are satisfied.
-
-
+\internal{Andrej}{I wanted to clarify the previous two paragraphs a
+  bit, but I am not sure it's an improvement. Please improve some
+  more. At some point we should say that both, parameterized theories
+  and uniform families get translated to functor signatures. But where
+  is the best place for that?}
 
 \begin{figure}
 	\[
@@ -162,8 +131,43 @@ by other means; the output can then be trusted to the extent that the obligation
 	\caption{Input Syntax (Simplified)}
 \end{figure}
 
+Propositions and predicates appearing in theories may use full
+first-order constructive logic, not just the negative fragment. The
+grammar for logical inputs is shown in Figure~\ref{fig:input}. Most of
+this should be familiar, including the use of lambda abstraction to
+define predicates.
 
+The language of sets is rich, going well beyond the type systems of
+typical programming languages. In addition to any base sets postulated
+in a theory, one can construct dependent cartesian products and
+dependent function spaces. We also supports disjoint unions (with
+labeled tags), quotient spaces (a set modulo a stable equivalence
+relation), subsets (elements of a set satisfying a predicate). RZ even
+permits explicit references to sets of realizers.
 
+The term language follows the structure of the set level by providing
+introduction and elimination constructs. For product sets we have
+tuples and projections ($\iproj{\ie}{1}$, $\iproj{\ie}{2}$, \ldots),
+and for function spaces we have lambda abstractions and application.
+One can inject a term into a tagged disjoin union, or do case analyses
+on the members of a union. We can produce the equivalence class of a
+given term, or pick a representative of a given equivalence class (as
+long as what we do with it does not depend on the particular
+representative). Very similarly, we can produce the set of realizers
+for a term, or choose a representative from a given set of realizers
+(as long as what we do with it does not depend on the particular
+representative). We can inject a term into a subset (if it satisfies
+the appropriate predicate), or project an element of a subset into the
+enclosing set. Finally, the term language also allows local
+definitions of term variables, and definite descriptions (as long as
+there is a unique element satisfying the predicate in question).
+
+From the parenthesized qualifiers in the previous paragraph, it is
+clear that checking the well-formedness of terms is not decidable. RZ
+checks what it can, but does not attempt any serious theorem proving.
+Uncheckable constraints remain as explicitly-marked \emph{obligations}
+in the final output, and must be verified by other means; the output
+can then be trusted to the extent that the obligations are satisfied.
 
 %%% Local Variables: 
 %%% mode: latex
