--- a/doc/cie/implementation.tex
+++ b/doc/cie/implementation.tex
@@ -1,15 +1,42 @@
 \section{Implementation}
 \label{sec:implementation}
 
-The RZ implementation consists of several sequential passes.  
+The RZ implementation consists of several sequential passes.
 
-After the initial parsing, a \emph{type reconstruction} phase checks that the input is well-typed (and checks for well-formedness to the extent that it is easily decidable), and if successful produces an annotated result with all variables explicitly tagged with types.  The type checking phase uses a system of dependent types, with limited subtyping (implicit coercions) for sum types and subset types.  The details are fairly standard, so are omitted here.  One non-obvious consequence of the realizability translation, however, is that the subset types $\isubset{\ix}{\iS}{\iand{\ipp_1(\ix)}{\ipp_2(\ix)}}$ and
-$\isubset{\ix}{\iS}{\iand{\ipp_2(\ix)}{\ipp_1(\ix)}}$ are not equivalent in general (even ignoring decidability concerns!).  An explicit coercion is required to go from one type to the other, because subset values are pairs containing realizers for $\iand{\ipp_1(\ix)}{\ipp_2(\ix)}$ and $\iand{\ipp_2(\ix)}{\ipp_1(\ix)}$, and these realizers have potentially different types
-$|\ipp_1(\ix)|\mathtt{*}|\ipp_2(\ix)|$ and $|\ipp_2(\ix)|\mathtt{*}|\ipp_1(\ix)|$ respectively.
+After the initial parsing, a \emph{type reconstruction} phase checks
+that the input is well-typed (and checks for well-formedness to the
+extent that it is easily decidable), and if successful produces an
+annotated result with all variables explicitly tagged with types. The
+type checking phase uses a system of dependent types, with limited
+subtyping (implicit coercions) for sum types and subset types. The
+details are fairly standard, so are omitted here. One non-obvious
+consequence of the realizability translation, however, is that the
+subset types $\isubset{\ix}{\iS}{\iand{\ipp_1(\ix)}{\ipp_2(\ix)}}$ and
+$\isubset{\ix}{\iS}{\iand{\ipp_2(\ix)}{\ipp_1(\ix)}}$ are not
+equivalent in general (even ignoring decidability concerns!). An
+explicit coercion is required to go from one type to the other,
+because subset values are pairs containing realizers for
+$\iand{\ipp_1(\ix)}{\ipp_2(\ix)}$ and
+$\iand{\ipp_2(\ix)}{\ipp_1(\ix)}$, and these realizers have
+potentially different types $|\ipp_1(\ix)|\mathtt{*}|\ipp_2(\ix)|$ and
+$|\ipp_2(\ix)|\mathtt{*}|\ipp_1(\ix)|$ respectively.
 
-Next the realizability translation is performed as described in Section~\ref{sec:translation}, producing interface code.  The flexibility of the full input language (e.g., n-ary sum types and dependent product types) makes the translation code fairly involved, and so it is performed in a ``naive'' fashion whenever possible.  The immediate result of the translation is not easily readable.
+Next the realizability translation is performed as described in
+Section~\ref{sec:translation}, producing interface code. The
+flexibility of the full input language (e.g., n-ary sum types and
+dependent product types) makes the translation code fairly involved,
+and so it is performed in a ``naive'' fashion whenever possible. The
+immediate result of the translation is not easily readable.
  
-Thus, three more passes simplify the output before it is displayed to the user.  A \emph{thinning} pass removes all references to trivial realizers produced by stable formulas.  For example,  direct translation of the \texttt{initial} axiom in the output for Kuratowski-finite sets yields
+
+\internal{Andrej}{I am afraid the Kuratowski example has changed so
+  the examples below are not in sync with the example. Will try to
+  think of another example.}
+Thus, three more passes simplify the output before it is displayed to
+the user. A \emph{thinning} pass removes all references to trivial
+realizers produced by stable formulas. For example, direct translation
+of the \texttt{initial} axiom in the output for Kuratowski-finite sets
+yields
 \begin{source}
 val initial: (A.a -> S.s) -> (fin -> S.s) * (top * (A.a -> top) * (fin -> fin -> top))
 \end{source}
