--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -233,12 +233,12 @@
 \newcommand{\oProp}{\mathsf{bool}}
 %%% Module type elements
 \newcommand{\ote}{\theta}
-\newcommand{\ovalspec}[2]{\mathsf{val}\,#1:#2}
-\newcommand{\otyspec}[1]{\mathsf{type}\,#1}
-\newcommand{\otydef}[2]{\mathsf{type}\,#1=#2}
-\newcommand{\omodulespec}[2]{\mathsf{module}\,#1:#2}
-\newcommand{\osignatdef}[2]{\mathsf{module}\,\mathsf{type}\,#1=#2}
-\newcommand{\opropspec}[2]{\mathsf{predicate}\,#1:#2}
+\newcommand{\ovalspec}[2]{\mathsf{val}\;#1:#2}
+\newcommand{\otyspec}[1]{\mathsf{type}\;#1}
+\newcommand{\otydef}[2]{\mathsf{type}\;#1=#2}
+\newcommand{\omodulespec}[2]{\mathsf{module}\;#1:#2}
+\newcommand{\osignatdef}[2]{\mathsf{module}\;\mathsf{type}\,#1=#2}
+\newcommand{\opropspec}[2]{\mathsf{predicate}\; #1:#2}
 \newcommand{\oassertion}[2]{\mathsf{assertion}\; #1 : #2}
 \newcommand{\oA}{A} % Assertion name
 %%% Module type
